--- a/fco/src/pages/Layout/Tabs.css
+++ b/fco/src/pages/Layout/Tabs.css
@@ -1,3 +1,6 @@
+:root{
+    --trans: 0.5s ease-in-out;
+}
 #tabs
 {
     position: absolute;
@@ -14,4 +17,51 @@
     bottom: -999px;
     left: 15px;
     transition: 1s ease-in-out;
+}
+#time-cd-id{
+    width: 250px;
+    height: 70px;
+    background-color: black;
+    position: absolute;
+    right: 25px;
+    top: 15px;
+    border: 2px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(to right bottom, #6a5af9, #f62682);
+    transition: var(--trans);
+}
+#cd-num{
+    color: white;
+    font-size: 25px;
+    width: 100%;
+    height: 35px;
+    line-height: 25px;
+    text-align: center;
+    position: absolute;
+    top: 35px;
+}
+#giftcode-show{
+    color: white;
+    font-size: 25px;
+    width: 100%;
+    height: 35px;
+    line-height: 25px;
+    text-align: center;
+    position: absolute;
+    top: 35px;
+    opacity: 0;
+    transition: var(--trans);
+}
+#giftcode-name{
+    color: black;
+    position: absolute;
+    width: 270px;
+    height: 25px;
+    background-color: yellow;
+    text-align: center;
+    line-height: 25px;
+    font-size: 22px;
+    left: -10px;
+    top: 5px;
+    border: 1px black solid;
 }
