--- a/fco/src/pages/Layout/Tabs.css
+++ b/fco/src/pages/Layout/Tabs.css
@@ -1,5 +1,15 @@
 :root{
     --trans: 0.5s ease-in-out;
+    --main-tab-pos: -325px;
+    --name-tab-pos: -325px;
+    /* 25px -325px*/
+    --top-name: 15px;
+    /* 25px 0px*/
+    --box-height: 25px;
+    /* 70px 25px*/
+    --top-minus: 90px;
+    /* 90px 55px*/
+    --opacity-minus: 0;
 }
 #tabs
 {
@@ -20,25 +30,27 @@
 }
 #time-cd-id{
     width: 250px;
-    height: 70px;
+    height: var(--box-height);
     background-color: black;
     position: absolute;
-    right: 25px;
+    right: var(--main-tab-pos);
     top: 15px;
-    border: 2px solid;
+    border: 1px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(to right bottom, #6a5af9, #f62682);
     transition: var(--trans);
+    z-index: 999;
 }
 #cd-num{
     color: white;
-    font-size: 25px;
+    font-size: 45px;
     width: 100%;
-    height: 35px;
-    line-height: 25px;
+    height: 45px;
+    line-height: 45px;
     text-align: center;
     position: absolute;
-    top: 35px;
+    transition: var(--trans);
+    top: 28px;
 }
 #giftcode-show{
     color: white;
@@ -61,7 +73,24 @@
     text-align: center;
     line-height: 25px;
     font-size: 22px;
-    left: -10px;
-    top: 5px;
+    right: var(--name-tab-pos);
+    top: var(--top-name);
+    transition: var(--trans);
     border: 1px black solid;
+    z-index: 1000;
+}
+#popup-minus{
+    position: absolute;
+    background-color: yellow;
+    z-index: 997;
+    width: 250px;
+    height: 25px;
+    line-height: 25px;
+    font-size: 18px;
+    border: 1px black solid;
+    text-align: center;
+    right: var(--main-tab-pos);
+    top: var(--top-minus);
+    opacity: var(--opacity-minus);
+    transition: var(--trans);
 }
