--- a/fco/src/pages/Layout/Tabs.css
+++ b/fco/src/pages/Layout/Tabs.css
@@ -1,28 +1,25 @@
-:root{
-    --trans: 0.3s ease-in-out;
+:root {
+    --trans: 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
     --main-tab-pos: -325px;
     --name-tab-pos: -325px;
-    /* 25px -325px*/
     --top-name: 15px;
-    /* 25px 0px*/
     --box-height: 25px;
-    /* 70px 25px*/
     --top-minus: 90px;
-    /* 90px 55px*/
     --opacity-minus: 0;
     --cd-num-opacity: 1;
     --opacity-giftcode: 0;
-}
-#tabs
-{
+  }
+  
+  #tabs {
     position: absolute;
     top: 0px;
     width: 100vw;
     height: 100vh;
     background: transparent;
     overflow: hidden;
-}
-#time-cd-id{
+  }
+  
+  #time-cd-id {
     width: 250px;
     height: var(--box-height);
     background-color: black;
@@ -33,35 +30,36 @@
     border-image-slice: 1;
     border-image-source: linear-gradient(to right bottom, #6a5af9, #f62682);
     transition: var(--trans);
-    z-index: 999;
-}
-#cd-num{
+  }
+  
+  #cd-num {
     color: white;
+    position: relative;
     font-size: 45px;
     width: 100%;
     height: 45px;
     line-height: 45px;
-    text-align: center;
-    position: absolute;
-    transition: var(--trans);
     top: 28px;
+    text-align: center;
+    transition: var(--trans);
     opacity: var(--cd-num-opacity);
-}
-#giftcode-show{
+  }
+  
+  #giftcode-show {
     color: white;
     font-size: 25px;
     width: 100%;
     height: 35px;
     line-height: 25px;
     text-align: center;
-    position: absolute;
     top: 35px;
     opacity: var(--opacity-giftcode);
     transition: var(--trans);
-}
-#giftcode-name{
-    color: black;
+  }
+  
+  #giftcode-name {
     position: absolute;
+    color: black;
     width: 270px;
     height: 25px;
     background-color: yellow;
@@ -72,20 +70,20 @@
     top: var(--top-name);
     transition: var(--trans);
     border: 1px black solid;
-    z-index: 1000;
-}
-#popup-minus{
+    z-index: 999;
+  }
+  
+  #popup-minus {
     position: absolute;
     background-color: yellow;
-    z-index: 997;
     width: 250px;
     height: 25px;
     line-height: 25px;
     font-size: 18px;
-    border: 1px black solid;
     text-align: center;
     right: var(--main-tab-pos);
     top: var(--top-minus);
     opacity: var(--opacity-minus);
     transition: var(--trans);
-}
+  }
+  
