--- a/fco/src/pages/Backend.css
+++ b/fco/src/pages/Backend.css
@@ -134,7 +134,7 @@ button {
 .text-info-ctn {
     border-radius: 5px;
     border: 1px solid rgba(0, 0, 0, 0.5);
-    height: 40px;
+    height: 30px;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -143,32 +143,36 @@ button {
 }
 
 .title-text-box {
-    width: 100px;
+    width: 66px;
     height: 30px;
     border-radius: 5px 0px 0px 5px;
-    font-size: 20px;
-    line-height: 40px;
+    font-size: 18px;
+    line-height: 30px;
     background: rgb(87, 87, 87);
     text-align: center;
+    text-transform: uppercase;
     color: rgb(236, 236, 236);
 }
 
 .text-info-box {
-    min-width: 110px;
+    min-width: 175px;
     height: 40px;
     line-height: 40px;
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
     border-radius: 0px 5px 5px 0px;
     padding: 0px 10px;
     text-transform: uppercase;
     cursor: default;
 }
+.text-info-box-fix{
+    min-width: 50px;
+}
 #match-info-result {
     padding: 5px;
 }
 .frag-ctn {
-    max-width: 445px;
+    min-width: 520px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -181,10 +185,6 @@ button {
     margin: 5px;
 }
 
-.lineupRS {
-    flex-direction: colum;
-    width: 50%;
-}
 
 .left-ctn {
     position: absolute;
