--- a/fco/src/pages/Backend.css
+++ b/fco/src/pages/Backend.css
@@ -174,7 +174,7 @@ button {
 .frag-ctn {
     min-width: 520px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
