--- a/fco/src/pages/Layout/Lineup/LineupNew.css
+++ b/fco/src/pages/Layout/Lineup/LineupNew.css
@@ -4,7 +4,7 @@
     --pos-l-ctn: -1000px;
     --pos-r-ctn: -1000px;
     /* 0 -1000 */
-    --trans: 0.5s ease-in-out;
+    --trans-l: 0.5s ease-in-out;
     --logo-master-main: 500px;
     /* 150px 500px*/
     --logo-master-top: 50%;
@@ -79,13 +79,13 @@
 #ctn-right {
     right: var(--pos-r-ctn);
     background: url('./bg.png') right/ cover no-repeat;
-    transition: var(--trans);
+    transition: var(--trans-l);
     z-index: -999;
 }
 #ctn-left {
     left: var(--pos-l-ctn);
     background: url('./bg.png') left/ cover no-repeat;
-    transition: var(--trans);
+    transition: var(--trans-l);
     z-index: -999;
 }
 
@@ -99,7 +99,7 @@
     top: var(--logo-master-top);
     right: var(--logo-master-right);
     transform: translate(50%, -50%);
-    transition: var(--trans);
+    transition: var(--trans-l);
     opacity: var(--main-logo-opacity);
 }
 #logo-league {
@@ -111,7 +111,7 @@
     top: var(--logo-master-top);
     left: var(--logo-master-right);
     transform: translate(-50%, -50%);
-    transition: var(--trans);
+    transition: var(--trans-l);
     opacity: var(--main-logo-opacity);
 
 }
@@ -129,14 +129,14 @@
     background: url(./bottom.png)center / contain no-repeat;
     width: 100%;
     height: 162px;
-    transition: var(--trans);
+    transition: var(--trans-l);
 }
 .logo-team {
     position: absolute;
     z-index: 999;
     height: var(--logo-team-height);
     background-color: rgba(255, 255, 255,0.8);
-    transition: var(--trans);
+    transition: var(--trans-l);
     border: 3px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(to right bottom, #6a5af9, #f62682);
@@ -146,13 +146,13 @@
     top: var(--logo-team-top);
     right: var(--logo-team-left);
     transform: translate(50%, -50%);
-    transition: var(--trans);
+    transition: var(--trans-l);
 }
 #logo-team-left-ctn {
     top: var(--logo-team-top);
     left: var(--logo-team-left);
     transform: translate(-50%, -50%);
-    transition: var(--trans);
+    transition: var(--trans-l);
 }
 .logo-team-ctn {
     display: flex;
@@ -162,7 +162,7 @@
     justify-content: center;
     align-items: center;
     z-index: 999;
-    transition: var(--trans);
+    transition: var(--trans-l);
 }
 /* .logo-team-ctn::after{
     content: "";
@@ -221,7 +221,7 @@
     position: relative;
     top: var(--text-team-top);
     right: var(--text-team-left);
-    transition: var(--trans);
+    transition: var(--trans-l);
     display: flex;
     opacity: var(--team-name-text-ctn-opacity);
 }
@@ -318,7 +318,7 @@
     transform: translate(50%, -50%);
     top: 40%;
     right: var(--game-ctn-pos);
-    transition: var(--trans);
+    transition: var(--trans-l);
     border-radius: 5px;
     z-index: 998;
 }
@@ -333,7 +333,7 @@
     transform: translate(-50%, -50%);
     top: 40%;
     left: var(--game-ctn-pos);
-    transition: var(--trans);
+    transition: var(--trans-l);
     border-radius: 5px;
     z-index: 998;
 }
@@ -350,7 +350,7 @@
     border-image-source: linear-gradient(to right bottom, #6a5af9, #f62682);
     border-radius: 5px;
     margin: 2px;
-    transition: var(--trans);
+    transition: var(--trans-l);
     overflow: hidden;
     display: block;
     position: relative;
@@ -367,13 +367,13 @@
     border-top: 1px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(to right bottom, #6a5af9, #f62682);
-    transition: var(--trans);
+    transition: var(--trans-l);
 }
 .image-player{
     position: absolute;
     width: 500px;
     transform: translate(-50%,0%);
-    transition: var(--trans);
+    transition: var(--trans-l);
     z-index: 998;
 }
 .game-box-playername{
@@ -388,7 +388,7 @@
     border-top: 1px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(to right bottom, #6a5af9, #f62682);
-    transition: var(--trans);
+    transition: var(--trans-l);
 }
 #game-box-l-1{
     flex: var(--game-1-l-Flex);
@@ -430,7 +430,7 @@
     left: var(--main-scroll);
     opacity: 0.1;
     position: relative;
-    transition: var(--trans);
+    transition: var(--trans-l);
     animation: move-top-to-bottom 30s infinite linear;
 }
 .scroll-text-loops{
@@ -443,7 +443,7 @@
     opacity: 0.1;
     position: relative;
     left: var(--side-scroll);
-    transition: var(--trans);
+    transition: var(--trans-l);
     animation: move-bottom-to-top 30s infinite linear;
 }
 @keyframes move-top-to-bottom {
@@ -473,7 +473,7 @@
     left: 50%;
     top: 40%;
     transform: translate(-50%,-50%);
-    transition: var(--trans);
+    transition: var(--trans-l);
     background-color: rgba(0, 0, 0,0.3);
     opacity: var(--match-info-ctn-opacity);
 }
@@ -495,10 +495,10 @@
     background-color: #f62682;
     rotate: 180deg;
     left: 20px;
-    transition: var(--trans);
-    animation: trans-arrow-left 1s linear infinite;
+    transition: var(--trans-l);
+    animation: trans-l-arrow-left 1s linear infinite;
 }
-@keyframes trans-arrow-left {
+@keyframes trans-l-arrow-left {
     0%,100%{
         left: 15px;
     }
@@ -511,10 +511,10 @@
     background-color: #6a5af9;
     right: 20px;
     top: 0px;
-    transition: var(--trans);
-    animation: trans-arrow-right 1s linear infinite;
+    transition: var(--trans-l);
+    animation: trans-l-arrow-right 1s linear infinite;
 }
-@keyframes trans-arrow-right {
+@keyframes trans-l-arrow-right {
     0%,100%{
         right: 15px;
     }
@@ -537,7 +537,7 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    transition: var(--trans);
+    transition: var(--trans-l);
 }
 .mid-game{
     flex: 2.5;
@@ -580,7 +580,7 @@
     flex: 4;
     background: linear-gradient(90deg ,#6a5af9 , rgba(0,0,0,0));
     height: var(--height-tab-game);
-    font-size: 25px;
+    font-size: 15px;
     line-height: var(--height-tab-game);
     text-align: start;
     text-transform: uppercase;
@@ -589,7 +589,7 @@
 .player-game-left{
     color: white;
     height: var(--height-tab-game);
-    font-size: 25px;
+    font-size: 15px;
     line-height: var(--height-tab-game);
     flex: 4;
     background: linear-gradient(-90deg ,#f62682 , rgba(0,0,0,0));
